@@ -7,23 +7,30 @@ module God
       def prepare
         @timeline = Timeline.new(self.times)
       end
-    
+      
+      def reset
+        @timeline.clear
+      end
+      
       def valid?
         valid = true
         valid &= complain("Attribute 'times' must be specified", self) if self.times.nil?
         valid
       end
-    
+      
       def test
         @timeline << Time.now
         
         concensus = (@timeline.size == self.times)
         duration = self.within.nil? || (@timeline.last - @timeline.first) < self.within
         
-        history = "[" + @timeline.map { |x| "#{x}" }.join(", ") + "]"
+        if within
+          history = "[#{@timeline.size}/#{self.times} within #{(@timeline.last - @timeline.first).to_i}s]"
+        else
+          history = "[#{@timeline.size}/#{self.times}]"
+        end
         
         if concensus && duration
-          @timeline.clear if within.nil?
           self.info = "tries exceeded #{history}"
           return true
         else
